# xge

./: .gitignore  README.en.md  README.md  build.bat  build.sh  build_android_apk.bat  build_android_ndk.bat  build_app_mode_exe.bat  build_app_mode_exe.sh  build_async_exe.bat  build_async_exe.sh  build_audio_exe.bat  build_audio_exe.sh  build_board_linux_egl_exe.sh  build_dbg_dll.bat  build_dbg_dll.sh  build_dbg_test.bat  build_debug_overlay_exe.bat  build_debug_overlay_exe.sh  build_dll.bat  build_dll.sh  build_egl_surfaceless_exe.sh  build_examples_all.bat  build_examples_xui.bat  build_exe.bat  build_exe.sh  build_gamepad_exe.bat  build_gamepad_exe.sh  build_input_exe.bat  build_input_exe.sh  build_isometric_depth_exe.bat  build_isometric_depth_exe.sh  build_linux_egl_exe.sh  build_linux_x11_exe.sh  build_macos_exe.sh  build_manual_validation_exe.bat  build_miniprogram.bat  build_miniprogram.sh  build_perspective_quad_exe.bat  build_perspective_quad_exe.sh  (+62 more)
artifacts/: number_probe.c  path_probe.c
docs/: API命名规则.md  ARCHITECTURE.md  BEST_PRACTICES.md  COMPATIBILITY.md  EXAMPLES.en.md  EXAMPLES.md  FAQ.en.md  FAQ.md  PERFORMANCE.en.md  README.md  XGE_V2_DESIGN.md  XGE_V2_SPEC.md  XGE_V2_TECH_PLAN.md  XRF生成工具计划.md  render-capability-and-proxy-design.md  terminal-control-design.md  text-render-foundation-merge.md  text-render-foundation.md  vector-render-capability-spec.md  workflow-control-api.md  场景系统说明.md  小程序后端说明.md  平台支持矩阵.md  板卡Linux冒烟测试计划.md  板卡Linux输入策略.md  构建脚本说明.md  渲染管线说明.md
examples/: README.md  (+1 more)
platform/android/: CMakeLists.txt  xge_android_main.c
(+2049 files in other folders)
